# sidewalk_mobility_demo

./: .gitignore  .gitmodules  README.md  requirements.txt
docker/: Dockerfile
src/aug_demo/: CMakeLists.txt  package.xml  setup.py
src/aug_demo/launch/: broadcast_sensor.launch  hj_test.launch  joy.launch  ltms.launch  remote_driving.launch  sensor.launch  vehicle.launch  vehicle2.launch
src/aug_demo/params/: g29.yaml
src/aug_demo/rviz/: aug_demo.rviz  remote_driving.rviz  sensor.rviz
src/aug_demo/scripts/: ltms.py  remote_driving.py  transform_sensor_objects.py  vehicle.py  vehicle2.py
src/aug_demo/srv/: RefinePath.srv  VerifyState.srv
src/june_demo/: CMakeLists.txt  README.md  package.xml  setup.py
src/june_demo/launch/: nats_connector_obj.launch  sensor.launch  vehicle.launch
src/june_demo/rviz/: june_demo.rviz
src/june_demo/scripts/: vehicle.py
src/svea_core/maps/: map_sml_new.pgm  sml_planner.yaml
src/svea_mocap/launch/: map_correction.launch  mocap_only.launch  mocap_to_state.launch
src/svea_mocap/scripts/: adapter_pose_to_vehicle_state.py  localization_comparison.py
src/svea_sensors/launch/: localize.launch  pedestrian_demo.launch  rtk.launch
src/svea_sensors/scripts/: pedestrian_location.py
src/svea_social_navigation/: CMakeLists.txt  package.xml  setup.py
src/svea_social_navigation/config/: costmap_params_sim.yaml  costmap_params_svea.yaml
src/svea_social_navigation/launch/: corridor_social.launch  lli.launch  mocap_svea_pedestrian.launch  pedsim.launch  (+4 more)
src/svea_vision/: .gitignore  package.xml
util/: config.sh  run
(+35 files in other folders)
